src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  height: 100%;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

#bgVid {
  position: fixed;
  right: 0;
  bottom: 0;
  min-width: 100%;
  min-height: 100%;
}

.logoLink {
  width: 5vw;
  height: auto;
  transition: all .25s ease-in-out;
  padding: .1vw;
}
.logoLink:hover {
  transform: scale(1.1);
}


a {
  transition: all .25s ease-in-out;
  text-decoration: none;
  color: inherit;
}
a:hover {
  color: black;
}

button {
    border-radius: 10px;
    margin: 1vw;
    background-color: transparent;
    color: white;
    font-size: 1vw;
    border: 2px solid white;
    transition: all .25s ease-in-out;
    
}
button:hover {
  transform: scale(1.1);
  color: black;
  border: 2px solid black;
}

th {
  transition: all .25s ease-in-out;
  overflow: hidden;
    padding: 3.2vw; 
    opacity: 0.75;
    border: 1px solid white;
    background: red;
    user-select: none;
    cursor: "grab";
}
th:hover {
  transform: scale(1.07);
  color: white;
}

#customInputDiv {
  height: 10vw;
  width: 100%;
  overflow-y: auto;
}

/*Input Field */
#inputBox {
  width: 60%;
  padding: 12px 20px;
  margin: 8px 0;
  box-sizing: border-box;
  background-color: purple;
  color: white;
  border: 5px solid black;
  border-radius: 10px;
}

::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: #cccccc;
}





/*--------------------------------------------
Checkboxes
--------------------------------------------*/

.customInput {
  display: block;
  position: relative;
  padding-left: 35px;
  margin-bottom: 12px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: .5vw;
  font-size: 1vw;
}
.customInput input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

/* Create a custom checkbox */
.checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: 25px;
  width: 25px;
  background-color: #eee;
  opacity: .8;
  border-radius: 8px;
}

/* On mouse-over, add a grey background color */
.customInput:hover input ~ .checkmark {
  background-color: #000;
}

/* When the checkbox is checked, add a blue background */
.customInput input:checked ~ .checkmark {
  background-color: #000;
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

/* Show the checkmark when checked */
.customInput input:checked ~ .checkmark:after {
  display: block;
  background-color: #000;
}

/* Style the checkmark/indicator */
.customInput .checkmark:after {
  left: 9px;
  top: 5px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

